# dc-fabric-cicd

./: .coverage  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  feature-workspaces.yml  parameter.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: copilot-instructions.md
.github/instructions/: scripts.instructions.md
.github/workflows/: ci.yml  deploy-fabric.yml  fabric-deploy.yml  feature-workspace-cleanup.yml  feature-workspace-create.yml  sync-wiki.yml  terraform.yml
.mcp/: README.md  config.json
docs/: microsoft-fabric-api-reference.md
examples/: fabric_example.py
scripts/: check_unmapped_ids.py  deploy-to-fabric.py  deploy_to_fabric.py  fabric_workspace_manager.py  logger.py  manage_feature_workspaces.py
scripts/fabric/: auth.py  fab_cli.py  reporting.py  types.py
terraform/: README.md  main.tf
terraform/environments/: dev.tfvars  prod.tfvars  test.tfvars
tests/: __init__.py  conftest.py  test_check_unmapped_ids.py  test_deploy_to_fabric.py  test_deploy_to_fabric_extended.py  test_deployment_config.py  test_fab_cli.py  test_fabric_workspace_manager.py  test_logger.py  test_manage_feature_workspaces.py  test_workflows_feature_lifecycle.py
wiki/: Deployment-Workflow.md  FAQ.md  Feature-Workspace-Lifecycle.md  Home.md  IT-Admin-Prerequisites-For-Fabric.md  IT-Admin-Prerequisites.md  README.md  Setup-Guide.md  Troubleshooting.md  Wiki-Contribution.md  Workspace-Configuration.md  _Footer.md  _Sidebar.md
workspaces/Fabric Autocreated Workspace 2/: config.yml
(+13 files in other folders)
